--- a/sass/content-form-theme.scss
+++ b/sass/content-form-theme.scss
@@ -77,7 +77,7 @@
       margin: 0;
 
       select {
-        min-height: 31px; /* 6 */
+        min-height: 30px; /* 6 */
       }
 
       @media screen and (-moz-device-pixel-ratio) {
@@ -155,6 +155,13 @@
 
   .entity-meta__title {
     text-shadow: none;
+  }
+
+  .entity-meta__last-saved,
+  .entity-meta__author {
+    label {
+      margin-right: 0.316em; // Emulate whitespace.
+    }
   }
 
   .seven-details {
